# memoza

./: .gitignore
.claude/skills/memoza-design/: styles.css
backend-services/1-user-access-management/: package-lock.json  package.json  tsconfig.base.json
backend-services/1-user-access-management/auth-worker/: .dev.vars.example  package.json  schema.sql  wrangler.jsonc
backend-services/1-user-access-management/gateway-worker/: .dev.vars.example  package.json  wrangler.jsonc
backend-services/1-user-access-management/shared/: package.json
backend-services/2-notes/notes-service/: package-lock.json  package.json  schema.sql  wrangler.jsonc
backend-services/4-public-sites/sites-worker/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
docs/api/: api-auth-usage.md  api-notes-usage.md
docs/architecture/: README.md
docs/architecture/1-user-access-management/: README.md  table.md  variables.md
docs/architecture/2-notes/: README.md  table.md  (+1 more)
frontend/: deploy.bat  package-lock.json  package.json
frontend/core/: package.json
frontend/desktop/: .env.example  index.html  package.json  vite.config.ts
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/capabilities/: default.json
frontend/desktop/src-tauri/icons/: icon.icns
frontend/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
frontend/desktop/src-tauri/src/: lib.rs  main.rs
frontend/public-reader/: deploy.bat  package.json  vite.config.ts
frontend/web/: .env.example  index.html  package.json  tsconfig.json  wrangler.jsonc
(+146 files in other folders)
